# tgp2eit

./: Main.py  Pipfile  Telegram.py  api.py  azmoon.py  db.py  env.py  mutil.py  post.py  pyproject.toml  requirements.txt  surf.py
.github/workflows/: clean.yml  files-azmoon.yml  walker.yml
