[tool.poetry]
name = "tg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
telethon = "^1.25.4"
python-socks = {extras = ["asyncio"], version = "^2.0.3"}
pymongo = "^4.3.2"
cryptg = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
